--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
-body {
+html,body {
   margin: 0;
   font-family: "Noto Serif KR";
   font-size: 400;
-  background-color: #222;
+  /* background-color: #ffe7eb; */
 }
+body > * {
+  font-family: "Noto Serif KR";
+  font-size: 400;
+  color: #444;
+}
+/* ::{
+  color:#0ea1ac;
+} */
